@@ -48,7 +48,7 @@ my %original_t_perms = ();
 
 my @std_run      = qw(start-httpd run-tests stop-httpd);
 my @others       = qw(verbose configure clean help ssl http11 bugreport 
-                      save no-httpd);
+                      save no-httpd one-process);
 my @flag_opts    = (@std_run, @others);
 my @string_opts  = qw(order trace);
 my @ostring_opts = qw(proxy ping);
@@ -89,6 +89,7 @@ my %usage = (
    'trace=T'         => 'change tracing default to: warning, notice, ' .
                         'info, debug, ...',
    'save'            => 'save test paramaters into Apache::TestConfigData',
+   'one-process'     => 'run the server in single process mode',
    (map { $_, "\U$_\E url" } @request_opts),
 );
 
@@ -398,6 +399,7 @@ sub refresh {
     $self->opt_clean(1);
     $self->{conf_opts}->{save} = delete $self->{conf_opts}->{thaw} || 1;
     $self->{test_config} = $self->new_test_config()->httpd_config;
+    $self->{test_config}->{server}->{run} = $self;
     $self->{server} = $self->{test_config}->server;
 }
 
@@ -690,6 +692,10 @@ sub run {
     $self->{test_config} = $self->new_test_config();
 
     $self->warn_core();
+
+    # give TestServer access to our runtime configuration directives
+    # so we can tell the server stuff if we need to
+    $self->{test_config}->{server}->{run} = $self;
 
     $self->{server} = $self->{test_config}->server;
 
